--- a/views/pages/mypage/dashboard.ejs
+++ b/views/pages/mypage/dashboard.ejs
@@ -6,7 +6,7 @@
 <body>
   <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
   <%- include(`${process.cwd()}/views/common/components/partial/aside.ejs`) %>
-  <div class="container-fruid">
+  <div class="container-fluid">
     <h1 class="mypage__title">My page</h1>
     <div class="row justify-content-center">
       <div class="col-4">
