--- a/views/pages/category/play_detail.ejs
+++ b/views/pages/category/play_detail.ejs
@@ -15,7 +15,7 @@
         <img src="/dist/assets/images/main/movie/poster_01.jpg" alt="poster" class="section__detail__poster">
       </div>
       <div class="col-6 padding-none margin-none">
-        <h2 class="section__detail__title strong">Frozen 2</h2>
+        <h2 class="section__detail__title strong"></h2>
         <p class="section__detail__subtitle"><span class="year">2019</span>, <span class="time">200m</span>, <span
             class="age">All</span><span class="point">★★★★☆</span></p>
         <p class="section__detail__descript">
@@ -31,7 +31,7 @@
       <% for (var i = 0; i < 3 ; i++ ){ %>
       <div class="section__comment__view">
         <div class="media">
-          <img src="..." class="align-self-top mr-3 section__comment__img" alt="...">
+          <img src="" class="align-self-top mr-3 section__comment__img" alt="">
           <p class="align-self-top section__comment__username mr-3 strong">User Name</p>
           <div class="media-body">
 
@@ -73,7 +73,8 @@
     </nav>
   </div>
   <div class="section__slide-mini">
-    <div class="wrap">      <div class="section__title_box">
+    <div class="wrap">      
+      <div class="section__title_box">
         <span class="line"></span>
         <h3 class="section__title strong">Other Play</h3>
       </div>
