--- a/public/src/assets/scss/pages/category/movie_detail.scss
+++ b/public/src/assets/scss/pages/category/movie_detail.scss
@@ -23,6 +23,19 @@
     font-size: $ft_small;
     line-height: 1.3;
   }
+  .point{
+    position: relative;
+  }
+  .point:after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 20px;
+    color: $pointColor_yellow;
+    content: '★★★★★';
+  }
 }
 
 .section__comment {
