update play detail - random slide

--- a/views/pages/category/play_detail.ejs
+++ b/views/pages/category/play_detail.ejs
@@ -84,18 +84,13 @@
       </div>
       <div class="swiper-container-mini">
         <div class="swiper-wrapper">
-          <% for (var i = 0; i < 11; i++) { %>
+          <% perforRandomList.map( list => { %>
           <div class="swiper-slide">
-            <a href="/movie/detail" class="link-blcok">
-              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+            <a href="/play/detail/<%= list.seq._text%>" class="link-blcok">
+              <img src="<%= list.thumbnail._text%>" alt="<%= list.title._text %>">
             </a>
           </div>
-          <div class="swiper-slide">
-            <a href="/movie/detail" class="link-blcok">
-              <img src="/dist/assets/images/main/slide_02.jpg" alt="">
-            </a>
-          </div>
-          <% } %>
+          <% }) %>
         </div>
         <!-- If we need navigation buttons -->
         <div class="section__slide-mini__button-prev">
