update musical menu link

--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -11,7 +11,7 @@
         <a class="nav-link ft-white header__link strong" href="/play/list">Play</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link ft-white header__link strong" href="#">Musical</a>
+        <a class="nav-link ft-white header__link strong" href="/musical/list">Musical</a>
       </li>
     </ul>
     <ul class="navbar-nav">
