--- a/views/pages/category/play_list.ejs
+++ b/views/pages/category/play_list.ejs
@@ -47,8 +47,8 @@
           <div class="swiper-wrapper">
             <% perforList.map(list => { %>
               <div class="swiper-slide">
-                <a href="/play/detail/<%= list.seq._text %>" class="link-block">
-                  <img src="<%= list.thumbnail._text%>" alt="<%= list.title._text%>">
+                <a href="/play/detail/<%= list.mt20id._text %>" class="link-block">
+                  <img src="<%= list.poster._text%>" alt="<%= list.prfnm._text%>">
                 </a>
               </div>
             <% }) %>
