implement side nav

--- a/views/common/components/partial/aside.ejs
+++ b/views/common/components/partial/aside.ejs
@@ -2,10 +2,10 @@
   <h3 class="aside__menu__title strong">My Page</h3>
   <ul class="aside__menu__list">
     <li class="aside__menu__item">
-      <a href="/users/mypage" class="link-block active strong">Dashboard</a>
+      <a href="/users/mypage" class="link-block" data-location="dashboard">Dashboard</a>
     </li>
     <li class="aside__menu__item">
-      <a href="/users/change_profile" class="link-block">Change your info</a>
+      <a href="/users/change_profile" class="link-block" data-location="changeInfo">Change your info</a>
     </li>
   </ul>
   <button class="btn aside__menu__button">
@@ -14,3 +14,4 @@
     </i>
   </button>
 </aside>
+<script src="/dist/assets/js/common/components/partial/aside.js"></script>
