update play list title

--- a/views/pages/category/play_list.ejs
+++ b/views/pages/category/play_list.ejs
@@ -71,7 +71,7 @@
       <div class="wrap">
         <div class="section__title_box">
           <span class="line"></span>
-          <h3 class="section__title strong">Top Rated Play</h3>
+          <h3 class="section__title strong">Recommend Play</h3>
         </div>
         <div class="swiper-container-part recommend">
           <div class="swiper-wrapper">
