add input attribute(name)

--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -14,27 +14,27 @@
         <div class="col-4">
           <div class="form-group">
             <label for="email" class="signup__form__label strong">Your Email</label>
-            <input type="email" class="form-control signup__form__input" id="email" aria-describedby="emailHelp">
+            <input type="email" class="form-control signup__form__input" id="email" name="email" aria-describedby="emailHelp" required>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="verifiedNumver" class="signup__form__label strong">Verified Number</label>
             <input type="text" class="form-control signup__form__input" id="verifiedNumver" aria-describedby="verifiedNumver">
-          </div>
+          </div> -->
           <div class="form-group">
             <label for="password" class="signup__form__label strong">Password</label>
-            <input type="password" class="form-control signup__form__input" id="password">
+            <input type="password" class="form-control signup__form__input" id="password" name="password" required>
           </div>
           <div class="form-group">
             <label for="checkPassword" class="signup__form__label strong">Confirm Password</label>
-            <input type="password" class="form-control signup__form__input" id="checkPassword">
+            <input type="password" class="form-control signup__form__input" id="checkPassword" required>
           </div>
           <div class="form-group">
             <label for="verifiedNumver" class="signup__form__label strong">Name</label>
-            <input type="text" class="form-control signup__form__input" id="username" aria-describedby="username">
+            <input type="text" class="form-control signup__form__input" id="username" name="username" aria-describedby="username">
           </div>
           <div class="form-group">
             <label for="phoneNumber" class="signup__form__label strong">Phone Number</label>
-            <input type="text" class="form-control signup__form__input" id="phoneNumber" aria-describedby="phoneNumber">
+            <input type="text" class="form-control signup__form__input" id="phoneNumber" name="phone" aria-describedby="phoneNumber">
           </div>
           <div class="form-group">
             <label for="captha" class="signup__form__label strong">Captha Number</label>
@@ -50,7 +50,7 @@
                 </button>
               </div>
               <div class="col-6 justify-cotent-end">
-                <input type="text" class="form-control signup__form__input" id="captha" placeholder="Number">
+                <input type="text" class="form-control signup__form__input" id="captha" placeholder="Number" required>
               </div>
             </div>
           </div>
