--- a/public/src/assets/scss/pages/auth/signin.scss
+++ b/public/src/assets/scss/pages/auth/signin.scss
@@ -34,6 +34,11 @@
     right: 0;
     padding: 5px;
     color: #bdbdbd;
+    transition: .2s;
+    &:focus, &:active{
+      color: #fff;
+      text-decoration: underline;
+    }
   }
 }
 
