--- a/views/pages/auth/signin.ejs
+++ b/views/pages/auth/signin.ejs
@@ -9,7 +9,7 @@
   <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
   <div class="container-fluid">
     <h1 class="signin__title">Sign in</h1>
-    <form class="signin__form" method="POST" action="/auth/signin">
+    <form class="signin__form">
       <div class="form-row justify-content-center">
         <div class="col-4">
           <div class="form-group">
