--- a/public/src/assets/scss/common/components/partial/_aside.scss
+++ b/public/src/assets/scss/common/components/partial/_aside.scss
@@ -6,7 +6,7 @@
   background-color: #400A14;
   border-right: 10px solid $pointColor_red;
   width: 15%;
-  height: calc(100% + 170px);
+  height: 100%;
   padding: 0 20px;
   transition: .5s;
   &__title{
