modify help message position

--- a/views/pages/auth/signin.ejs
+++ b/views/pages/auth/signin.ejs
@@ -14,14 +14,15 @@
         <div class="col-4">
           <div class="form-group">
             <label for="email" class="signin__form__label strong">Your Email</label>
-            <input type="email" class="form-control signin__form__input" id="email" name="email" aria-describedby="emailHelp" required>
+            <input type="email" class="form-control signin__form__input" id="email" name="email"
+              aria-describedby="emailHelp" required>
           </div>
           <div class="form-group">
             <label for="password" class="signin__form__label strong">Password</label>
+            <input type="password" class="form-control signin__form__input" id="password" name="password" required>
             <a href="" class="signin__form__help">
               <small id="passwordHelp" class="form-text">Forgot your password?</small>
             </a>
-            <input type="password" class="form-control signin__form__input" id="password" name="password" required>
           </div>
         </div>
       </div>
@@ -29,10 +30,10 @@
         <button type="submit" class="btn signin__button-login ">Sign in</button>
         <a href="/" class="btn signin__button-cancel ">Home</a>
       </div>
-  
+
       <div class="d-flex justify-content-center">
-          <a href="/auth/signup" class="btn signin__button-join ">I want join here!</a>
-        </div>
+        <a href="/auth/signup" class="btn signin__button-join ">I want join here!</a>
+      </div>
     </form>
   </div>
   <div class="footer__bottom">
